--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/gh/aayushchouhan24/sheryjs@main/dist/Shery.js"></script>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
