--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dev's multilink platform</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/aayushchouhan24/sheryjs@main/dist/Shery.css" />
     <link rel="stylesheet" href="style.css">
 
@@ -31,11 +31,11 @@
               
         </div>
         <div id="bg" class="images">
-            <img src="/assets/person-wearing-futuristic-virtual-reality-glasses-gaming (1).jpg" alt="">
-            <img src="/assets/person-using-futuristic-virtual-reality-headset-video-games (1).jpg" alt="">
+            <img src="assets/person-wearing-futuristic-virtual-reality-glasses-gaming (1).jpg" alt="">
+            <img src="assets/person-using-futuristic-virtual-reality-headset-video-games (1).jpg" alt="">
 
-            <img src="/assets/woman-futuristic-robot-with-wires-all-overs (1).jpg" alt="">
-            <img src="/assets/woman-portrait-with-blue-lights-visual-effects (1).jpg" alt="">
+            <img src="assets/woman-futuristic-robot-with-wires-all-overs (1).jpg" alt="">
+            <img src="assets/woman-portrait-with-blue-lights-visual-effects (1).jpg" alt="">
         </div>
         <div id="forground">
             <nav>
